--- a/composer.json
+++ b/composer.json
@@ -16,12 +16,12 @@
   ],
   "require": {
     "php": ">=5.6",
-    "illuminate/support": "5.2.*|5.3.*|5.4.*",
+    "illuminate/support": "5.2.*|5.3.*|5.4.*|5.5.*|5.6.*|5.7.*|5.8.*",
     "guzzlehttp/guzzle": "^6.2"
   },
   "require-dev": {
-    "illuminate/container": "5.2.*|5.3.*|5.4.*",
-    "illuminate/config": "5.2.*|5.3.*|5.4.*"
+    "illuminate/container": "5.2.*|5.3.*|5.4.*|5.5.*|5.6.*|5.7.*|5.8.*",
+    "illuminate/config": "5.2.*|5.3.*|5.4.*|5.5.*|5.6.*|5.7.*|5.8.*"
   },
   "autoload": {
     "psr-4": {
