--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "mylukin/textractor",
+  "name": "iceqi/textractor",
   "description": "An efficient class library for extracting text from HTML.",
   "keywords": [
     "extractor",
